save refresh data

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri May 01 05:03:34 EDT 2020
-sdk.dir=C\:\\Users\\kavee\\AppData\\Local\\Android\\Sdk
+#Fri May 01 08:12:49 EDT 2020
+sdk.dir=C\:\\Users\\Itsuki Sakamoto\\AppData\\Local\\Android\\Sdk
